# actix-web-server

./: Cargo.toml  config.yaml  key.yaml  readme.md
src/: lib.rs  main.rs  startserver.rs  utils.rs
src/middleware/: createtoken.rs  middlewarewrapper.rs  mod.rs
src/models/: client.rs  mod.rs
src/routes/: check_with_token.rs  mod.rs
src/routes/Authentication/: login.rs  mod.rs  signup.rs
